BUGFIX:SSF-106 - fixed overflow issues on asset admin

--- a/scss/_AssetAdmin.scss
+++ b/scss/_AssetAdmin.scss
@@ -1,4 +1,13 @@
 .cms .AssetAdmin {
+	.cms-content-fields {
+			overflow:hidden; //removes scrolling from filter panel
+			.cms-edit-form.AssetAdmin {
+				overflow-y:auto; //adds scrolling only to the datagrid 
+			}
+			.cms-content-tools .cms-panel-content .cms-search-form {
+				overflow:hidden; //removes scollbar from search field in filter
+			}	
+	}
 	.cms-content-header-tabs {
 		.ui-tabs-nav {
 			li {
